--- a/web/assets/css/style-geek.css
+++ b/web/assets/css/style-geek.css
@@ -304,6 +304,16 @@ header, .navbar{
    background-color: #FFF;
 }
 
+.section .col{
+   padding: 0 2rem;
+   background-color: #FFF;
+}
+
+.section .col-lg-6{
+   padding: 0 2rem;
+   background-color: #FFF;
+}
+
 .prim-col{
    border-top-left-radius: 6px;
 }
