--- a/web/assets/css/style-geek.css
+++ b/web/assets/css/style-geek.css
@@ -703,6 +703,11 @@ span.sub-img{
 }
 
 @media (max-width: 575px){
+   .carousel-caption h3{
+      font-size: 24px;
+      text-align: start;
+   }
+
    /* zoom efeito */
    .zoom{
       transition: 0s;
@@ -742,7 +747,7 @@ span.sub-img{
    }
 }
 
-@media (max-width: 425px){
+@media (max-width: 495px){
    .titulo{
       font-size: 50px;
    }
@@ -752,12 +757,18 @@ span.sub-img{
       font-size: 14px;
    }
 
-      /* textos */
+   /* textos */
    .carousel-caption h3{
+      color: #ea2326;
+      font-size: 28px;
+   }
+
+   .carousel-caption .subtitle-span{
       display: none;
    }
 
    .carousel-caption .p-sm{
       display: none;
    }
+
 }
