--- a/web/assets/css/style-geek.css
+++ b/web/assets/css/style-geek.css
@@ -734,8 +734,25 @@ span.sub-img{
 }
 
 @media (max-width: 495px){
+   /* slider */
+   #mainSlider{
+      height: 300px;
+      margin-top: 63px;
+   }
+   
    .titulo{
       font-size: 50px;
+   }
+
+   #introducao p{
+      color: #FFF;
+      width: 10px;
+      margin: 25px auto;
+      letter-spacing: .1rem;
+      
+      font-size: 14px;
+      text-align: center;
+      left: 0;
    }
 
    #introducao p{
