--- a/web/assets/css/style-geek.css
+++ b/web/assets/css/style-geek.css
@@ -708,10 +708,6 @@ span.sub-img{
       margin-top: 60px;
    }
    
-   #mainSlider .carousel-inner, #mainSlider .carousel-item{
-      height: 45vh;
-   }
-   
    .carousel-caption h3{
       font-size: 24px;
       text-align: start;
@@ -743,9 +739,13 @@ span.sub-img{
 }
 
 @media (max-width: 495px){
+   .container.comics{
+      padding-top: 50px;
+   }
+   
    /* slider */
    #mainSlider{
-      height: 400px;
+      height: 240px;
       margin-top: 60px;
    }
 
