--- a/web/assets/css/style-geek.css
+++ b/web/assets/css/style-geek.css
@@ -511,19 +511,20 @@ span.sub-img{
    color: #fa292c;
 }
 
-/* ---- FEEDBACK ---- */
+/* ---- COMENTARIOS ---- */
 .main-subtitle.backs{
    margin: 0 auto;
+}
+
+.main-subtitle.backs::after{
+   content: "";
+   width: 50%;
 }
 
 .usuario-name{
    color: #000;
    font-size: 18px;
    text-align: left;
-}
-
-.hashtag{
-   color: #00909b;
 }
 
 /* copy */
