--- a/web/assets/css/style-geek.css
+++ b/web/assets/css/style-geek.css
@@ -741,6 +741,10 @@ span.sub-img{
 }
 
 @media (max-width: 495px){
+   #mainSlider .carousel-inner, #mainSlider .carousel-item{
+      height: 45vh;
+   }
+      
    .container.comics{
       padding-top: 40px;
    }
@@ -762,8 +766,7 @@ span.sub-img{
 
    /* textos */
    .carousel-caption h3{
-      color: #ea2326;
-      font-size: 28px;
+      display: none;
    }
 
    .carousel-caption .subtitle-span{
@@ -771,12 +774,16 @@ span.sub-img{
    }
 
    .carousel-caption .p-sm{
-      display: none;
+      text-align: left;
    }
 }
 
 @media (max-width: 416px){
+   #mainSlider .carousel-inner, #mainSlider .carousel-item{
+      height: 45vh;
+   }
+
    .carousel-caption .titulo{
-      font-size: 40px;
+      font-size: 36px;
    }
 }
